# myonvif

./: ONVIFclient搜索设备获取rtsp地址开发笔记(精华篇) - jhcelue - 博客园.html  README.md  commands.sh  onvif 协议 - Endv - 博客园.html  onvif介绍.pptx  基于onvif规范的视频监控系统客户端（三）：自动搜索设备，获得连接在局域网内的摄像头的rtsp地址 - Cherry_Lover的博客 - CSDN博客.html
device/: Makefile  impl.cpp  main.cpp  main.xxx  main2.cxx  soapClient.cpp
device/gsoap/: wsseapi.h
device/gsoapgen/: soapStub.h
devicesimulator/: Makefile  OnvifServerSimu.pro  README.md  main.cpp  mainwindow.ui
devicesimulator/Live555/liveMedia/: SIPClient.cpp  TheoraVideoRTPSink.cpp  VorbisAudioRTPSink.cpp  WAVAudioFileSource.cpp
devicesimulator/media/: H264EndWrapper.h
gsoap-2.8/: Makefile  config.h  config.status  gsoap++.pc  gsoap.pc  gsoapck++.pc  gsoapck.pc  gsoapssl++.pc  gsoapssl.pc
gsoap-2.8/autom4te.cache/: requests  traces.7  traces.8
gsoap-2.8/gsoap/: Makefile
gsoap-2.8/gsoap/.deps/: libgsoap___a-dom_cpp.Po  libgsoap___a-stdsoap2_cpp.Po  libgsoap_a-dom.Po  libgsoap_a-stdsoap2.Po  libgsoapck___a-dom_cpp.Po  libgsoapck___a-stdsoap2_ck_cpp.Po  libgsoapck_a-dom.Po  libgsoapck_a-stdsoap2_ck.Po  libgsoapssl___a-dom_cpp.Po  libgsoapssl___a-stdsoap2_ssl_cpp.Po  libgsoapssl_a-dom.Po  libgsoapssl_a-stdsoap2_ssl.Po
gsoap-2.8/gsoap/import/: wsa5.h
gsoap-2.8/gsoap/samples/: Makefile
gsoap-2.8/gsoap/src/: Makefile  README.txt
schemas/: DeviceIOBinding.nsmap  DisplayBinding.nsmap  Makefile  generation.txt  server.cpp  soapClient.c  soapServer.c  soapStub.h
server/: Makefile  impl.cpp  main.cpp  soapServer.c
service/src/: smacros.h
test/: CMakeLists.txt  Makefile  main.cpp  stdsoap2.h
test/interface/: CMakeLists.txt  main.cpp  onvif_comm.c  onvif_comm.h  onvif_dump.c  onvif_dump.h  rtsp_stream.cpp  rtsp_stream.h
(+129 files in other folders)
